--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,14 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Tal_Mor/.m2/repository/org/glassfish/jersey/media/jersey-media-multipart/2.13/jersey-media-multipart-2.13.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="org.glassfish.jersey.media"/>
+			<attribute name="maven.artifactId" value="jersey-media-multipart"/>
+			<attribute name="maven.version" value="2.13"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
