--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/CouponSystem/jersey-media-multipart-2.24.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
